[gd_scene load_steps=11 format=2]

[ext_resource path="res://scene/pause.gd" type="Script" id=1]
[ext_resource path="res://assets/button/button_setting.png" type="Texture" id=2]
[ext_resource path="res://assets/button/setting_hover.png" type="Texture" id=3]
[ext_resource path="res://assets/paused/bg.png" type="Texture" id=4]
[ext_resource path="res://assets/paused/play.png" type="Texture" id=5]
[ext_resource path="res://assets/paused/play_hover.png" type="Texture" id=6]
[ext_resource path="res://assets/paused/to_menu.png" type="Texture" id=7]
[ext_resource path="res://assets/paused/to_menu_hover.png" type="Texture" id=8]
[ext_resource path="res://assets/paused/restart.png" type="Texture" id=9]
[ext_resource path="res://assets/paused/restart_hover.png" type="Texture" id=10]

[node name="pause" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="pause_button" type="TextureButton" parent="."]
margin_left = 310.284
margin_top = 10.6586
margin_right = 351.284
margin_bottom = 51.6586
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 179.539, 319.743 )
texture = ExtResource( 4 )

[node name="play" type="TextureButton" parent="Sprite"]
margin_left = -32.9312
margin_top = -50.5384
margin_right = 44.0688
margin_bottom = 30.4616
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="menu" type="TextureButton" parent="Sprite"]
margin_left = 56.5664
margin_top = -37.9331
margin_right = 109.566
margin_bottom = 18.0669
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="restart" type="TextureButton" parent="Sprite"]
margin_left = -102.423
margin_top = -39.0008
margin_right = -46.4233
margin_bottom = 18.9992
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )
[connection signal="pressed" from="pause_button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Sprite/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Sprite/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Sprite/restart" to="." method="_on_restart_pressed"]
